# gol

./: .gitignore  CMakeLists.txt  README.md  mai24m030_cpu_time.csv  mai24m030_openmp_time.csv  main.cpp  runCpuTest.bat  runOpenMpTest.bat
src/: Board.h  FileHandler.cpp  FileHandler.h  GameOfLife.cpp  GameOfLife.h  TestBoards.h
